--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
     <!-- Her photo -->
-    <img src="her_photo.jpg" alt="Her" class="hero">
+    <img src="IMG_1912.jpeg" alt="Her" class="hero">
 
     <h1>Will you be my valentaqdees?</h1>
     <button class="btn" onclick="window.location.href='second.html'">Click me for yes 💖</button>
