Update image source in second.html

--- a/second.html
+++ b/second.html
@@ -83,7 +83,7 @@
 </head>
 <body>
     <!-- Both of you -->
-    <img src="both_photo.jpg" alt="Us" class="hero">
+    <img src="ISIMG-1113095.jpeg" alt="Us" class="hero">
 
     <!-- Floating hearts -->
     <div class="heart">💖</div>
