--- a/index.html
+++ b/index.html
@@ -1,69 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentine Surprise</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Valentine Surprise</title>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 
-        body {
-            margin: 0;
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(to bottom right, #ffc0cb, #ff4d6d);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            text-align: center;
-            color: #fff;
-            overflow: hidden;
-            position: relative;
-        }
+    /* General styles */
+    body, html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        font-family: 'Arial', sans-serif;
+        overflow: hidden;
+    }
 
-        h1 {
-            font-family: 'Great Vibes', cursive;
-            font-size: 4em;
-            margin-bottom: 50px;
-            text-shadow: 2px 2px 5px #ff0000;
-        }
+    /* Background gradient */
+    body {
+        background: linear-gradient(to bottom right, #ffc0cb, #ff4d6d);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        position: relative;
+        color: white;
+    }
 
-        .btn {
-            background: #ff4d6d;
-            border: none;
-            padding: 20px 50px;
-            font-size: 2em;
-            color: white;
-            border-radius: 15px;
-            cursor: pointer;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-            transition: all 0.3s ease;
-        }
+    /* Hero image overlay */
+    .hero-container {
+        position: relative;
+        max-width: 90%;
+        max-height: 80%;
+        border-radius: 20px;
+        overflow: hidden;
+        box-shadow: 0 0 40px rgba(255,0,50,0.7);
+    }
 
-        .btn:hover {
-            background: #ff1a3c;
-            transform: scale(1.1);
-        }
+    .hero-container img {
+        width: 100%;
+        height: auto;
+        display: block;
+        filter: brightness(70%);
+    }
 
-        img.hero {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            max-width: 90%;
-            max-height: 80%;
-            border-radius: 20px;
-            box-shadow: 0 0 30px rgba(255,0,50,0.6);
-            z-index: -1;
-        }
-    </style>
+    /* Text overlay */
+    .overlay-text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-family: 'Great Vibes', cursive;
+        font-size: 4em;
+        text-shadow: 2px 2px 10px #ff0000;
+    }
+
+    /* Button */
+    .btn {
+        margin-top: 40px;
+        padding: 20px 50px;
+        font-size: 2em;
+        background: #ff4d6d;
+        color: white;
+        border: none;
+        border-radius: 15px;
+        cursor: pointer;
+        box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+        transition: all 0.3s ease;
+    }
+
+    .btn:hover {
+        background: #ff1a3c;
+        transform: scale(1.1);
+    }
+
+    /* Floating hearts */
+    .heart {
+        position: absolute;
+        font-size: 2em;
+        animation: floatHeart 6s infinite;
+    }
+
+    .heart:nth-child(1) { left: 15%; animation-delay: 0s; }
+    .heart:nth-child(2) { left: 60%; animation-delay: 2s; }
+    .heart:nth-child(3) { left: 80%; animation-delay: 4s; }
+
+    @keyframes floatHeart {
+        0% { transform: translateY(0px); }
+        50% { transform: translateY(-40px); }
+        100% { transform: translateY(0px); }
+    }
+</style>
 </head>
 <body>
-    <!-- Her photo -->
-    <img src="IMG_1912.jpeg" alt="Her" class="hero">
 
-    <h1>Will you be my valentaqdees?</h1>
-    <button class="btn" onclick="window.location.href='second.html'">Click me for yes 💖</button>
+<!-- Hero Image -->
+<div class="hero-container">
+    <img src="IMG_1912.jpeg" alt="Her">
+    <div class="overlay-text">Will you be my valentaqdees?</div>
+</div>
+
+<!-- Button -->
+<button class="btn" onclick="window.location.href='second.html'">Click me for yes 💖</button>
+
+<!-- Floating hearts -->
+<div class="heart">💖</div>
+<div class="heart">💖</div>
+<div class="heart">💖</div>
+
 </body>
 </html>
