Change image source in hero container

--- a/second.html
+++ b/second.html
@@ -103,7 +103,7 @@
 <body>
 
 <div class="hero-container">
-    <img src="both_photo.jpg" alt="Us">
+    <img src="ISIMG-1113095.jpeg" alt="Us">
 </div>
 
 <!-- Floating hearts -->
