--- a/index.html
+++ b/index.html
@@ -1,112 +1,71 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Valentine Surprise</title>
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
-
-    /* General styles */
-    body, html {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        font-family: 'Arial', sans-serif;
-        overflow: hidden;
-    }
-
-    /* Background gradient */
-    body {
-        background: linear-gradient(to bottom right, #ffc0cb, #ff4d6d);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        position: relative;
-        color: white;
-    }
-
-    /* Hero image overlay */
-    .hero-container {
-        position: relative;
-        max-width: 90%;
-        max-height: 80%;
-        border-radius: 20px;
-        overflow: hidden;
-        box-shadow: 0 0 40px rgba(255,0,50,0.7);
-    }
-
-    .hero-container img {
-        width: 100%;
-        height: auto;
-        display: block;
-        filter: brightness(70%);
-    }
-
-    /* Text overlay */
-    .overlay-text {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-family: 'Great Vibes', cursive;
-        font-size: 4em;
-        text-shadow: 2px 2px 10px #ff0000;
-    }
-
-    /* Button */
-    .btn {
-        margin-top: 40px;
-        padding: 20px 50px;
-        font-size: 2em;
-        background: #ff4d6d;
-        color: white;
-        border: none;
-        border-radius: 15px;
-        cursor: pointer;
-        box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-        transition: all 0.3s ease;
-    }
-
-    .btn:hover {
-        background: #ff1a3c;
-        transform: scale(1.1);
-    }
-
-    /* Floating hearts */
-    .heart {
-        position: absolute;
-        font-size: 2em;
-        animation: floatHeart 6s infinite;
-    }
-
-    .heart:nth-child(1) { left: 15%; animation-delay: 0s; }
-    .heart:nth-child(2) { left: 60%; animation-delay: 2s; }
-    .heart:nth-child(3) { left: 80%; animation-delay: 4s; }
-
-    @keyframes floatHeart {
-        0% { transform: translateY(0px); }
-        50% { transform: translateY(-40px); }
-        100% { transform: translateY(0px); }
-    }
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Taqdees 💘</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
 
-<!-- Hero Image -->
-<div class="hero-container">
-    <img src="IMG_1912.jpeg" alt="Her">
-    <div class="overlay-text">Will you be my valentaqdees?</div>
-</div>
+<body class="page page-ask">
+  <div class="fx-layer" aria-hidden="true">
+    <div class="petals"></div>
+    <div class="sparkles"></div>
+  </div>
 
-<!-- Button -->
-<button class="btn" onclick="window.location.href='second.html'">Click me for yes 💖</button>
+  <main class="card card--glass">
+    <header class="top">
+      <div class="badge">
+        <span class="badge__dot"></span>
+        <span class="badge__text">From Anas 💗</span>
+      </div>
 
-<!-- Floating hearts -->
-<div class="heart">💖</div>
-<div class="heart">💖</div>
-<div class="heart">💖</div>
+      <h1 class="title">
+        Taqdees…
+        <br>
+        Will you be my
+        <span class="title__glow">pretty valentaqdees</span>?
+      </h1>
 
+      <p class="subtitle">
+        Out of all the people in the world,
+        I found <span class="accent">you</span>…  
+        and I never want to lose that. 🌹
+      </p>
+    </header>
+
+    <section class="photoWrap">
+      <div class="photoFrame">
+        <img class="photo" src="assets/her.jpg" alt="Taqdees" />
+        <div class="frameRoses" aria-hidden="true"></div>
+      </div>
+
+      <div class="miniNotes">
+        <div class="note">Taqdees + Anas = 💞</div>
+        <div class="note">My favorite place is wherever you are</div>
+        <div class="note">You make my world softer and brighter</div>
+      </div>
+    </section>
+
+    <section class="actions">
+      <a class="btn btn--yes" href="yes.html" id="goYes">
+        <span class="btn__icon">💗</span>
+        Click for YES
+        <span class="btn__shine"></span>
+      </a>
+
+      <button class="btn btn--cute" id="noBtn" type="button">
+        <span class="btn__icon">🙈</span>
+        No (not allowed)
+        <span class="btn__shine"></span>
+      </button>
+    </section>
+
+    <footer class="footer">
+      <span>Made by Anas, only for Taqdees 🌸</span>
+    </footer>
+  </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
