Update image source in yes.html

--- a/yes.html
+++ b/yes.html
@@ -40,7 +40,7 @@
 
     <section class="photoWrap">
       <div class="photoFrame photoFrame--double">
-        <img class="photo" src="assets/us.jpg" alt="Anas and Taqdees" />
+        <img class="photo" src="assets/assets/ISIMG-1113095.jpeg" alt="Anas and Taqdees" />
         <div class="frameRoses frameRoses--more"></div>
       </div>
 
