Fix image source path in index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <section class="photoWrap">
       <div class="photoFrame">
-        <img class="photo" src="assets/assets/IMG_1912.jpeg" alt="Taqdees" />
+        <img class="photo" src="assets/IMG_1912.jpeg" alt="Taqdees" />
         <div class="frameRoses" aria-hidden="true"></div>
       </div>
 
